Fixing height visual bugs on mobile devices

--- a/styles/showcase.module.css
+++ b/styles/showcase.module.css
@@ -57,4 +57,8 @@
     .projectContent {
         width: 100%;
     }
+
+    .projectsContainer {
+        height: 150vh;
+    }
 }
