--- a/styles/stack.module.css
+++ b/styles/stack.module.css
@@ -58,3 +58,9 @@
         height: 200px;
     }
 }
+
+@media only screen and (max-width: 500px) {
+    .stackContainer {
+        height: 150vh;
+    }
+}
